# TII-Robotics-Integration-Engineer-Challenge

./: Dockerfile  Dockerfile.app  README.md  docker-compose.yml  entrypoint.sh
POLARIS_GEM_e2-main/polaris_gem_drivers_sim/gem_pure_pursuit_sim/waypoints/: wps.csv
POLARIS_GEM_e2-main/polaris_gem_simulator/gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
POLARIS_GEM_e2-main/polaris_gem_simulator/gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch
media/: realTime_pathTracking_Rviz_2024年08月31日.webm
tii_pure_pursuit_controller/: CMakeLists.txt  package.xml
tii_pure_pursuit_controller/config/: pure_pursuit_params.yaml
tii_pure_pursuit_controller/include/pure_pursuit_controller/: frame_id_remapper.h  path_tracking_planner.h  pure_pursuit_controller.h  state_machine.h
tii_pure_pursuit_controller/launch/: pure_pursuit_controller.launch
tii_pure_pursuit_controller/src/: frame_id_remapper.cpp  main.cpp  path_tracking_planner.cpp  pure_pursuit_controller.cpp  state_machine.cpp
tii_pure_pursuit_controller/test/: CMakeLists.txt  test_pure_pursuit.cpp  test_state_machine.cpp  test_state_machine.test
tii_pure_pursuit_controller/waypoint_examples/: curved_waypoints.csv
