<package format="2">
  <name>pure_pursuit_controller</name>
  <version>0.0.1</version>
  <description>The pure_pursuit_controller package</description>

  <author email="mohamedkarimziadi@gmail.com">Karim Ziadi</author>
  <maintainer email="karim.ziadi@lexxpluss.com"> Karim Ziadi </maintainer>
  <url type="repository">https://github.com/biamterdex/TII-Robotics-Integration-Engineer-Challenge.git</url>
  

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
